[metadata]
name = snowlance
version = 0.1.0
author = guoxiaoyang11
description = A thread safe, monotonic, customizable, eazy to use SnowFlake ID generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guoxiaoyang11/snowlance

[options]
packages = find:
package_dir = = src 
python_requires = >=3.12

[options.packages.find]
where = src 

[options.extras_require]
test =
    pytest>=8.4.0
    pytest-asyncio>=1.0.0
    pytest-cov>=6.1.1